fix: Add spacing to transactions items

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -1,3 +1,8 @@
 .transactions-container {
     margin: 24px 0;
+
+    .transaction {
+        display: block;
+        margin-bottom: 16px;
+    }
 }
